// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the HTMLView component should render a block quote 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Testings
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 0.5,
            "borderColor": "#A5A5A5",
            "borderTopWidth": 0.5,
            "marginVertical": 46.08,
            "paddingHorizontal": 16,
            "paddingVertical": 34.56,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render a line break (br) 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Testings
          </Text>
        </Text>
      </View>
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        

      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render a link 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Testings 
          </Text>
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#17B582",
              }
            }
          >
            <Text>
              Google
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render a list 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 8.64,
            }
          }
        >
          <View
            style={
              Object {
                "paddingRight": 8,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              •
            </Text>
          </View>
          <View
            style={
              Object {
                "flexShrink": 1,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              <Text>
                Testings
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 8.64,
            }
          }
        >
          <View
            style={
              Object {
                "paddingRight": 8,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              •
            </Text>
          </View>
          <View
            style={
              Object {
                "flexShrink": 1,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              <Text>
                Testings
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render a loading state 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "85%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "75%",
          }
        }
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render a paragraph 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Testings
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an H1 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 43,
            "lineHeight": 49.45,
            "paddingVertical": 46.44,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an H2 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 36,
            "lineHeight": 41.4,
            "paddingBottom": 25.92,
            "paddingTop": 38.88,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an H3 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
            "paddingBottom": 17.28,
            "paddingTop": 25.92,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an H4 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 23.04,
            "paddingBottom": 11.52,
            "paddingTop": 15.21,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an H5 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 20.16,
            "paddingBottom": 10.08,
            "paddingTop": 13.31,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an H6 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
            "paddingBottom": 8.64,
          }
        }
      >
        <Text>
          <Text>
            Testings
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render an image 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        animate={null}
        customAnimate={null}
        onReady={false}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      >
        <Image
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://placeholdit.co/i/150x150?bg=eeeeee&fc=577084",
                "url": "https://placeholdit.co/i/150x150?bg=eeeeee&fc=577084",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "opacity": 0,
              "resizeMode": "contain",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render bold text 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            bold={true}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text>
              Testings
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render example HTML 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            I sat on my couch next to my high school 
          </Text>
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#17B582",
              }
            }
          >
            <Text>
              Fuse Group
            </Text>
          </Text>
          <Text>
            , silently fuming at their inability to put their phones down during Bible study. Finally, I spoke up, teasing one of the girls in a tone that clearly said, “I’m not actually kidding.” 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            A few days later, I was in the car with my sister, and as I sat in the passenger seat responding to emails, I heard her laugh and say, “You always mumble when you are typing. Stop doing that.” 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            “Sorry,” I responded. “I just don’t want people to think I’m ignoring them when I’m typing.”
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            But the truth is, I am ignoring them! In my head, this behavior is totally acceptable. I tell myself I’m tending to my priorities in order, and in doing so, I send a message to the person in front of me that she is of lesser importance.
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 0.5,
            "borderColor": "#A5A5A5",
            "borderTopWidth": 0.5,
            "marginVertical": 46.08,
            "paddingHorizontal": 16,
            "paddingVertical": 34.56,
          }
        }
      >
        <View
          style={
            Object {
              "paddingBottom": 17.28,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Italic",
                "fontSize": 16,
                "lineHeight": 26,
                "textAlign": "center",
              }
            }
          >
            <Text>
              My phone is the primary outlet that distracts me from people who need my attention.
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            I quickly get frustrated when I am the one on the outside, but how often to I shut others out during my own social media binges or email frenzies? Just like my girls, I’m learning that my phone is the primary outlet that distracts me from people who need my attention.
          </Text>
        </Text>
      </View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
            "paddingBottom": 17.28,
            "paddingTop": 25.92,
          }
        }
      >
        <Text>
          <Text>
            Why Being Present Matters
          </Text>
        </Text>
      </Text>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            There is nothing wrong with using our phones — as long as we remember that the best investment we can make is to invest in our relationships with Jesus and each other. We were created for 
          </Text>
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#17B582",
              }
            }
          >
            <Text>
              community
            </Text>
          </Text>
          <Text>
             by God, who exists in community as Father, Son, and Holy Spirit (John 1:1-2, Genesis 2:18). 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Our phones help us stay connected, but they are not the foundation of all connection. If we’re honest, our phones are much quicker to distract and disengage us from the people right in front of us. 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Jesus said loving God and loving others is greatest of all God’s commandments (Matthew 22:38-40). And, after trying everything the world had to offer, King Solomon reminded his people that their relationships with God and others are the only things that really matter (Ecclesiastes 2:24-26, Ecclesiastes 3:9). 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 0.5,
            "borderColor": "#A5A5A5",
            "borderTopWidth": 0.5,
            "marginVertical": 46.08,
            "paddingHorizontal": 16,
            "paddingVertical": 34.56,
          }
        }
      >
        <View
          style={
            Object {
              "paddingBottom": 17.28,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Italic",
                "fontSize": 16,
                "lineHeight": 26,
                "textAlign": "center",
              }
            }
          >
            <Text>
              Greater love has no one than this: to lay down one’s phone for one’s loved ones.
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            So the next time we feel like we have to text back immediately or tweet before someone else does, consider: 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 8.64,
            }
          }
        >
          <View
            style={
              Object {
                "paddingRight": 8,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              •
            </Text>
          </View>
          <View
            style={
              Object {
                "flexShrink": 1,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              <Text>
                Am I putting others before myself right now?
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 8.64,
            }
          }
        >
          <View
            style={
              Object {
                "paddingRight": 8,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              •
            </Text>
          </View>
          <View
            style={
              Object {
                "flexShrink": 1,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              <Text>
                How can I love the people around me if I’m not even paying attention to them?
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 8.64,
            }
          }
        >
          <View
            style={
              Object {
                "paddingRight": 8,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              •
            </Text>
          </View>
          <View
            style={
              Object {
                "flexShrink": 1,
              }
            }
          >
            <Text
              bold={false}
              italic={false}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                }
              }
            >
              <Text>
                What if Jesus wants to speak through me, but I’ve got my nose stuck in my phone? 
              </Text>
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            The world won’t implode if we don’t reply to every text or email immediately. And that Instagram picture doesn’t need to go up ASAP. If it’s already been a week between posts, what’s a few more hours? We love everyone better — our friends to our coworkers to our social media followers — when we give them the gift of our full attention. 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            I can almost hear Jesus saying, “Greater love has no one than this: to lay down one’s phone for one’s loved ones”  (John 15:13). 
          </Text>
        </Text>
      </View>
      <Text
        padded={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
            "paddingBottom": 17.28,
            "paddingTop": 25.92,
          }
        }
      >
        <Text>
          <Text>
            Four Ways To Stay Away From Your Phone And Be Intentionally Present
          </Text>
        </Text>
      </Text>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#17B582",
              }
            }
          >
            <Text>
              This holiday season
            </Text>
          </Text>
          <Text>
            , we will have more opportunities to be around friends and family than usual. So let’s make the most of each minute. The following are some tips can help us all be a little more present.  
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8.64,
          }
        }
      >
        <View
          style={
            Object {
              "paddingRight": 8,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            •
          </Text>
        </View>
        <View
          style={
            Object {
              "flexShrink": 1,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text>
              Turn your phone off, leave it in the car, or put it in airplane mode. Habitual notification checks can take a break.
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8.64,
          }
        }
      >
        <View
          style={
            Object {
              "paddingRight": 8,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            •
          </Text>
        </View>
        <View
          style={
            Object {
              "flexShrink": 1,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text>
              Talk about something other than yourself. Ask someone else about their life (job, school, kids).
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8.64,
          }
        }
      >
        <View
          style={
            Object {
              "paddingRight": 8,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            •
          </Text>
        </View>
        <View
          style={
            Object {
              "flexShrink": 1,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text>
              Look for opportunities to encourage someone. Ask the Holy Spirit to speak through you and help you love people.
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8.64,
          }
        }
      >
        <View
          style={
            Object {
              "paddingRight": 8,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            •
          </Text>
        </View>
        <View
          style={
            Object {
              "flexShrink": 1,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text>
              Ask Jesus to keep your heart interested and engaged in what really matters. He wants to help!
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Intentionally taking advantage of time with loved ones sometimes does require sacrificing our own immediate desires or comforts, but that’s what we are commanded to do (Philippians 2:3). 
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Take pictures, but don’t let the only memory be a digital one. The positive outcome of interactions should be more than Instagram likes. Unplug from social media, choose to be present, and you will be surprised at the good it does for your heart and the hearts of those around you.
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render handle relative links 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Testings 
          </Text>
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#17B582",
              }
            }
          >
            <Text>
              Google
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component should render italic text 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            bold={false}
            italic={true}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Italic",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text>
              Testings
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the HTMLView component strips out badly formatted links 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 17.28,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Bad link
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
